--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -34,8 +34,8 @@
 .arrow_up {
     margin-left: 120px;
     border: 1px solid #171717;
-    border-radius: 50%;
-    padding: 15px;
+    border-radius: 50%; 
+    padding: 18px 20px;
     width: 30px;
 }
 .sidebar_wrap::after {
