--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -45,7 +45,7 @@
     margin-left: 120px;
     border: 1px solid #171717;
     border-radius: 50%; 
-    padding: 18px 20px;
+    padding: 20px;
     width: 30px;
 }
 .arrow_up img{
@@ -58,7 +58,7 @@
     display: block;
     content: '';
     width: 1px;
-    height: 1000px;
+    height: 1020px;
     background-color: #171717;
     position: absolute;
     bottom: -100px;
