--- a/css/style.css
+++ b/css/style.css
@@ -213,19 +213,27 @@
 }
 .cards_wrap {
     display: flex;
-    gap: 66px;
+    gap: 24px;
     position: relative;
     padding: 5px;
+    max-width: 1350px;
+    height: 650px;
+    margin-bottom: 100px;
 }
 .cards {
-    box-shadow: 0px 0px 4px rgba(75, 75, 75, 0.25);
     border-radius: 24px;
-    max-width: 288px;
+    width: 315px !important;
+    margin-right: 0px !important;
     height: 600px;
-    padding: 32px 24px;
+    padding: 20px 0px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    border: 2px solid #DCDCDC;
+}
+.cards:hover {
+    box-shadow: 0px 0px 4px rgba(75, 75, 75, 0.25);
 }
 .cards_desc img {
     margin-bottom: 32px;
@@ -243,7 +251,11 @@
     line-height: 165%;
 }
 .cards_price {
-    text-align: center;
+    text-align: right;
+}
+.cards_desc {
+    display: flex;
+    flex-direction: column;
 }
 .price {
     font-weight: 300;
@@ -251,7 +263,7 @@
     line-height: 165%;
     margin-bottom: 10px;
 }
-.price span {
+.cards_price span {
     font-weight: 400;
     font-size: 16px;
     line-height: 165%;
@@ -279,10 +291,20 @@
     padding-left: 30px;
 }
 .pagination {
-    position: absolute;
     display: flex;
-    bottom: -90px;
-    right: 0px;
+    margin-top: 20px;
+    align-self: flex-end;
+    position: absolute;
+    bottom: 55px;
+    right: 20px;
+    width: 130px;
+}
+.swiper-button-next:after, .swiper-button-prev:after {
+    content: '';
+}
+.swiper_my {
+    display: flex;
+    flex-direction: column;
 }
 .arrows {
     border: 1px solid #171717;
@@ -376,6 +398,15 @@
     transition: 0.1s;
 }
 .catalog_li a:hover .arow_hide {
+    display: block;
+}
+.catalog_li:hover a {
+    width: 110px;
+    background-color: #171717;
+    color: white;
+    transition: 0.1s;
+}
+.catalog_li:hover .arow_hide {
     display: block;
 }
 /* ____________________________________Advantages__________________________________________________ */
@@ -496,6 +527,16 @@
 }
 .partners_img_mob {
     display: none;
+}
+.partners_li:hover a {
+    width: auto;
+    padding-right: 12px;
+    background-color: #171717;
+    color: white;
+    transition: 0.1s;
+}
+.partners_li:hover .arow_hide {
+    display: block;
 }
 /* ____________________________________Geography__________________________________________________ */
 .geography {
@@ -620,6 +661,7 @@
     }
     .about_cont_img_r {
         gap: 6px;
+        margin-top: 30px;
     }
     .about_cont_img {
         gap: 8px;
@@ -707,6 +749,19 @@
     }
     .cards_wrap {
         gap: 16px;
+        align-items: center;
+    }
+    .pagination {
+        display: flex;
+        margin-top: 20px;
+        align-self: flex-end;
+        position: absolute;
+        bottom: 55px;
+        left: 160px;
+        width: 130px;
+    }
+    .swiper_my {
+        width: 330px;
     }
     /* _____________________________________________catalog_________________________________________ */
     .catalog {
@@ -736,7 +791,16 @@
         width: auto;
     }
     .catalog_li p {
-        font-size: 16px !important;
+        font-size: 15px !important;
+    }
+    .catalog_li a {
+        width: 110px;
+        background-color: #171717;
+        color: white;
+        transition: 0.1s;
+    }
+    .arow_hide {
+        display: block;
     }
     /* _____________________________________________advantages_________________________________________ */
     .advantages {
@@ -795,9 +859,12 @@
         width: auto;
     }
     .partners_li a {
-        padding-right: 15px;
+        padding-right: 12px;
         justify-content: center;
         width: auto;
+        background-color: #171717;
+        color: white;
+        transition: 0.1s;
     }
     /* _____________________________________________geography_________________________________________ */
     .geography {
